Updated goa design doc - base: links, s/dec/decode, s/red/redirect
* regenerated app/client/swagger/tool
